--- a/src/components/chat.css
+++ b/src/components/chat.css
@@ -1,14 +1,18 @@
 .chat {
   display: flex;
   flex-direction: column;
-  flex: 0.65;
+  flex: 0.7;
 }
 
 .chat__header {
-  padding: 20px;
+  padding: 10px 16px;
+  height: 59px;
+  width: 100%;
   display: flex;
   align-items: center;
-  border-bottom: 1px solid lightgray;
+  box-sizing: border-box;
+  border-left: 1px solid rgba(0, 0, 0, 0.08);
+  z-index: 1000;
 }
 
 .chat__headerInfo {
@@ -19,10 +23,13 @@
 .chat__headerInfo > h3 {
   margin-bottom: 3px;
   font-weight: 500;
+  font-size: 17px;
 }
 
-.chat__headerIfo > p {
+.chat__headerInfo > p {
   color: gray;
+  font-size: 13px;
+  line-height: 22px;
 }
 
 .chat__body {
@@ -30,33 +37,59 @@
   background-image: url("https://user-images.githubusercontent.com/15075759/28719144-86dc0f70-73b1-11e7-911d-60d70fcded21.png");
   background-repeat: repeat;
   background-position: center;
-  padding: 30px;
-  overflow: scroll;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  padding-left: 9%;
+  padding-right: 9%;
+}
+
+.chat__messageContainer {
+  flex-direction: column;
+  margin-bottom: 12px;
+  border-radius: 7.5px;
+  max-width: 65%;
+  position: relative;
+  flex: none;
+  font-size: 14.2px;
+  line-height: 19px;
+  background-color: #fff;
+  z-index: 200;
+  padding: 10px 10px 10px 10px;
+  box-sizing: border-box;
+  align-items: flex-start;
+  width: fit-content;
+}
+
+.chat__name {
+  display: inline-flex;
+  max-width: 100%;
+  font-size: 12.8px;
+  font-weight: 500;
+  line-height: 22px;
+  padding-right: 30px;
 }
 
 .chat__message {
   position: relative;
-  font-size: 16px;
-  padding: 10px;
-  width: fit-content;
-  border-radius: 10px;
-  background-color: #ffffff;
-  margin-bottom: 30px;
+  white-space: pre-wrap;
 }
 
 .chat__timestamp {
+  display: inline;
   margin-left: 10px;
-  font-size: xx-small;
+  z-index: 10;
+  height: 15px;
+  line-height: 15px;
+  white-space: nowrap;
 }
 
-.chat__name {
-  position: absolute;
-  top: -15px;
-  font-weight: 800;
-  font-size: xx-small;
+.chat__timestamp > span {
+  float: right;
+  color: gray;
+  font-size: 11px;
 }
 
-.chat__receiever {
+.chat__receiver {
   margin-left: auto;
   background-color: #dcf8c6;
 }
@@ -76,6 +109,7 @@
 
 .chat__footer > form > input {
   flex: 1;
+  outline-width: 0;
   border-radius: 30px;
   padding: 10px;
   border: none;
