--- a/src/components/sidebar.css
+++ b/src/components/sidebar.css
@@ -1,16 +1,27 @@
 .sidebar {
   display: flex;
   flex-direction: column;
-  flex: 0.35;
+  flex: 0.3;
+  height: 100%;
 }
 
 .sidebar__header {
+  position: relative;
   display: flex;
-  justify-content: space-between;
-  padding: 20px;
-  border-right: 1px solid lightgray;
+  align-items: center;
+  justify-content: flex-end;
+  padding: 10px 16px;
+  height: 59px;
+  width: 100%;
+  flex: none;
+  background-color: #ededed;
+  box-sizing: border-box;
+  z-index: 1000;
 }
 
+.sidebar__headerLeft {
+  flex-grow: 1;
+}
 .sidebar__headerRight {
   display: flex;
   align-items: center;
@@ -19,25 +30,26 @@
 }
 
 .sidebar__headerRight > .MuiSvgIcon-root {
-  margin-right: 2vw;
-  font-size: 24px !important;
+  padding: 8px;
 }
 
 .sidebar__search {
   display: flex;
   align-items: center;
   background-color: #f6f6f6;
-  height: 39px;
-  padding: 10px;
+  height: 49px;
+  padding: 0px 10px;
+  z-index: 100;
 }
 
 .sidebar__searchContainer {
   display: flex;
   align-items: center;
   background-color: white;
-  width: 100%;
+  width: 96%;
   height: 35px;
   border-radius: 20px;
+  box-sizing: border-box;
 }
 
 .sidebar__searchContainer > .MuiSvgIcon-root {
@@ -56,5 +68,7 @@
 .sidebar__chats {
   flex: 1;
   background-color: white;
-  overflow: scroll;
+  overflow-y: auto;
+  z-index: 1;
+  flex-grow: 1;
 }
