--- a/src/components/sidebarChat.css
+++ b/src/components/sidebarChat.css
@@ -1,6 +1,6 @@
 .sidebarChat {
   display: flex;
-  padding: 20px;
+  padding: 10px;
   cursor: pointer;
   border-bottom: 1px solid #f6f6f6;
 }
@@ -10,10 +10,15 @@
 }
 
 .sidebarChat__info > h2 {
-  font-size: 16px;
-  margin-bottom: 8px;
+  font-weight: 500;
+  font-size: 17px;
+}
+
+.sidebarChat__info > p {
+  font-size: 13px;
 }
 
 .sidebarChat__info {
   margin-left: 15px;
+  line-height: 22px;
 }
